--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -95,22 +95,23 @@
                 <div class="clear-fix"></div>
                 {{#each getReviewBySort review}}
                 <div class="row">
-                    <div class="col-sm-12">
-                        <div class="col-sm-5 pull-left space-top-detail2">
-                            <img src="{{getImages user}}" class="img-responsive center-block image{{user}}" style="width:50%;">
-                            <h4 class="bold text-center {{user}}">{{getImageUser user}}</h4>
-                        </div>
+                    <div class="col-xs-4 pull-left space-top-detail2">
+                        <img src="{{getImages user}}" class="img-responsive center-block image{{user}}">
+                        <h4 class="bold text-center {{user}}">{{getImageUser user}}</h4>
+                    </div>
+                    <div class="col-xs-8">
                         <div class="pull-left space-top-detail3">
-                            <h3>{{comment}}</h3>
+                            <!-- <h2>{{comment}}</h2> -->
+                            <p class="col-sm-5 pull-left space-top-detail2">{{title}}</p>
                             <p class="no-margin">{{getDate date}}</p>
                         </div>
-                        <div class="col-sm-2 pull-right space-top-detail2">
-                            <!--  <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp; {{grade}}/5</h3> -->
-                        </div>
-                        <div class="col-sm-12">
-                            <h3 class="col-sm-5 pull-left space-top-detail2">{{title}}</h3>
-                            <div class="pull-left border-detail">
-                            </div>
+                    </div>
+                    <div class="col-sm-2 pull-right space-top-detail2">
+                        <!--  <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp; {{grade}}/5</h3> -->
+                    </div>
+                    <div class="col-sm-12">
+                        <p class="col-sm-5 pull-left space-top-detail2">{{comment}}</p>
+                        <div class="pull-left border-detail">
                         </div>
                     </div>
                 </div>
@@ -132,5 +133,4 @@
             <br />
         </section>
     </article>
-
 </template>
