--- a/client/Views/App/Member-shipcard/member.html
+++ b/client/Views/App/Member-shipcard/member.html
@@ -3,9 +3,19 @@
 		<section class="shadow_bottom">
 			<div class="wrapper">
 				<div class="row">
-					<div class="col-xs-12">
-						<h2 class="text-right">BLACK MEMBER {{getpoint}} pt</h2>
-					</div>
+					{{#if isBronze}}
+						<div class="col-xs-12">
+							<h2 class="text-right">BLACK MEMBER {{getpoint}} pt</h2>
+						</div>
+	                {{/if}} {{#if isSilver}}
+	                	<div class="col-xs-12">
+							<h2 class="text-right member-siver">SILVER MEMBER {{getpoint}} pt</h2>
+						</div>
+	                {{/if}} {{#if isGold}}
+	                	<div class="col-xs-12">
+							<h2 class="text-right member-gold">GOLD MEMBER {{getpoint}} pt</h2>
+						</div>
+	                {{/if}}
 				</div>
 				<div class="row">
 					<div class="bg_border"></div>
@@ -16,63 +26,112 @@
 					</div>
 				</div>
 				<div class="row">							
-						<div class="col-xs-7">
-							<div class="hold-member-content">
-								<div class="img_profile1">
-									<div class="div-circle">
-										<p>{{nb_comments}}</p>
-									</div>
-									<h5 class="title_img img_menber text-center">{{_"NUMBER OF COMMENTS"}}</h5>
+					<div class="col-xs-7">
+						<div class="hold-member-content">
+							<div class="img_profile1">
+								<div class="div-circle">
+									<p>{{nb_comments}}</p>
 								</div>
-								<div class="img_profile1">
-									<div class="div-circle">
-										<p>{{nb_likes}}</p>
-									</div>
-									<h5 class="title_img img_menber text-center">{{_"NUMBER OF LIKES"}}</h5>
+								<h5 class="title_img img_menber text-center">{{_"NUMBER OF COMMENTS"}}</h5>
+							</div>
+							<div class="img_profile1">
+								<div class="div-circle">
+									<p>{{nb_likes}}</p>
 								</div>
-								<div class="img_profile1">
-									<div class="div-circle">
-										<p>{{getpoint}}</p>
-									</div>
-									<h5 class="title_img img_menber text-center">{{_"POINTS"}}</h5>
+								<h5 class="title_img img_menber text-center">{{_"NUMBER OF LIKES"}}</h5>
+							</div>
+							<div class="img_profile1">
+								<div class="div-circle">
+									<p>{{getpoint}}</p>
 								</div>
+								<h5 class="title_img img_menber text-center">{{_"POINTS"}}</h5>
 							</div>
 						</div>
-						<div class="col-xs-5">
-							<div class="hold-member-content">
-								<div class="img_profile2">
-									<div class="title_progressor">
-										<p class="title_gold1">{{_"GOLD"}}</p>
-									</div>
-									<div class="progress vertical border_gold">
-										
-										<div class="progress-bar progress-bar-gold" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:{{getGold}}%"></div>
-									</div>
+					</div>
+					<div class="col-xs-5">
+						{{#if isBronze}}
+						<div class="hold-member-content">
+							<div class="img_profile2">
+								<div class="title_progressor">
+									<p class="title_gold1">{{_"GOLD"}}</p>
 								</div>
-
-								<div class="img_profile4">
-									<div class="title_progressor">
-										<p class="title_silver">{{_"SILVER"}}</p>
-									</div>
-									<div class="progress vertical border_silver">
-										
-										<div class="progress-bar progress-bar-silver" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:{{getSilver}}%"></div>
-										
-									</div>
-								</div>
-								
-								<div class="img_profile6">
-									<div class="title_progressor">
-										<p class="title_black">{{_"BLACK"}}</p>
-									</div>
-									<div class="progress vertical border_black1">
-										
-										<div class="progress-bar progress-black" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:{{getBronze}}%"></div>
-										
-									</div> 
+								<div class="progress vertical border_gold">
+									<div class="progress-bar progress-bar-gold" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:0%"></div>
 								</div>
 							</div>
+							<div class="img_profile4">
+								<div class="title_progressor">
+									<p class="title_silver">{{_"SILVER"}}</p>
+								</div>
+								<div class="progress vertical border_silver">
+									<div class="progress-bar progress-bar-silver" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:0%"></div>
+								</div>
+							</div>
+							<div class="img_profile6">
+								<div class="title_progressor">
+									<p class="title_black">{{_"BLACK"}}</p>
+								</div>
+								<div class="progress vertical border_black1">
+									<div class="progress-bar progress-black" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:{{persentage}}%"></div>
+								</div> 
+							</div>
 						</div>
+						{{/if}} {{#if isSilver}}
+						<div class="hold-member-content">
+							<div class="img_profile2">
+								<div class="title_progressor">
+									<p class="title_gold1">{{_"GOLD"}}</p>
+								</div>
+								<div class="progress vertical border_gold">
+									<div class="progress-bar progress-bar-gold" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:0%"></div>
+								</div>
+							</div>
+							<div class="img_profile4">
+								<div class="title_progressor">
+									<p class="title_silver">{{_"SILVER"}}</p>
+								</div>
+								<div class="progress vertical border_silver">
+									<div class="progress-bar progress-bar-silver" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:{{persentage}}%"></div>
+								</div>
+							</div>
+							<div class="img_profile6">
+								<div class="title_progressor">
+									<p class="title_black">{{_"BLACK"}}</p>
+								</div>
+								<div class="progress vertical border_black1">
+									<div class="progress-bar progress-black" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:100%"></div>
+								</div> 
+							</div>
+						</div>
+						{{/if}} {{#if isGold}}
+						<div class="hold-member-content">
+							<div class="img_profile2">
+								<div class="title_progressor">
+									<p class="title_gold1">{{_"GOLD"}}</p>
+								</div>
+								<div class="progress vertical border_gold">
+									<div class="progress-bar progress-bar-gold" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
+								</div>
+							</div>
+							<div class="img_profile4">
+								<div class="title_progressor">
+									<p class="title_silver">{{_"SILVER"}}</p>
+								</div>
+								<div class="progress vertical border_silver">
+									<div class="progress-bar progress-bar-silver" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:100%"></div>
+								</div>
+							</div>
+							<div class="img_profile6">
+								<div class="title_progressor">
+									<p class="title_black">{{_"BLACK"}}</p>
+								</div>
+								<div class="progress vertical border_black1">
+									<div class="progress-bar progress-black" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:100%"></div>
+								</div> 
+							</div>
+						</div>
+						{{/if}}
+					</div>
 					<div class="col-xs-12">
 						<div class="row_img">
 							<div class="col-xs-5">
@@ -88,8 +147,84 @@
 							<p class="text_profile text-center">{{_"Be more active on the forum to earn points and gift"}}</p>
 						</div>
 					</div>
+					<div class="col-xs-12">
+						<div class="well-member">
+							<h4>How to earn more points</h4>
+						</div>
+					</div>
+					<!-- <div class="col-xs-6">
+						<img src="/img/img_reward4.png" class="center-block img-responsive">
+					</div>
+					<div class="col-xs-6">
+						<img src="/img/img_reward3.png" class="center-block img-responsive">
+					</div> -->
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 maginbotom" align="center">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 product maginbotom">
+                            <a href="#"><img src="/img/1.create-account.png" style=" width:46%;" onmouseover="this.src='/images/Creating-an-account.png'" onmouseout="this.src='/images/1.create-account.png'" class="img-responsive" alt="get points by visiting to the site"></a>
+                            <p class="text_profile">Creating an account</p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 product maginbotom">
+                            <a href="/listQuizz"><img src="/img/2.complete-profile.png" style="    width: 46%;" onmouseover="this.src='/images/Complete-the-profile.png'" onmouseout="this.src='/images/2.complete-profile.png'" class="img-responsive" alt="points on a specific day"></a>
+                            <p class="text_profile">Complete the profile</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 maginbotom" align="center">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 product maginbotom">
+                            <a href="#"><img src="/img/Adding-a-review-Commenting-on-the-website.png" style=" width:46%;" onmouseover="this.src='/images/Adding a review.png'" onmouseout="this.src='/images/Adding-a-review-Commenting-on-the-website.png'" class="img-responsive" alt="points for a specific product"></a>
+                            <p class="text_profile">Adding a review Commenting on the website</p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 product maginbotom">
+                        	<a href="#"><img src="/img/4.adding-5-review.png" style=" width:46%;" onmouseover="this.src='/images/Adding a review.png'" onmouseout="this.src='/images/4.adding-5-review.png'" class="img-responsive" alt="points for watching tutorials"></a>
+                            <p class="text_profile">Adding 5 review:Commenting on the website</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 maginbotom" align="center">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 product maginbotom">
+							<a href="#"><img src="/img/5.sharing-content.png" style=" width:46%;" onmouseover="this.src='/images/Complete-the-profile.png'" onmouseout="this.src='/images/5.sharing-content.png'" class="img-responsive" alt="points when shopping online"></a>
+	                        <p class="text_profile">Sharing content to friend being sponsored by a friend</p>
+	                    </div>
+	                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 product maginbotom">
+	                    	<a href="#"><img src="/img/6.sharing-content-to-3-friends.png" style=" width:46%;" onmouseover="this.src='/images/Sharing-content-to-3-friends.png'" onmouseout="this.src='/images/6.sharing-content-to-3-friends.png'" class="img-responsive" alt="points for sharing Safir perfumery"></a>
+	                        <p class="text_profile">Sharing content to 3 friends</p>
+	                    </div>
+					</div>
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 maginbotom" align="center">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 product maginbotom">
+							<a href="#"><img src="/img/7.follow-us-instagram.png" style=" width:46%;" onmouseover="this.src='/images/Following us on Instagram.png'" onmouseout="this.src='/images/7.follow-us-instagram.png'" class="img-responsive" alt="points for like the page"></a>
+	                        <p class="text_profile">Following us on Instagram</p>
+	                    </div>
+	                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 product maginbotom">
+	                    	<a href="{{pathFor 'imedation'}}"><img src="/img/8.shop-online.png" style=" width:46%;" onmouseover="this.src='/images/Shop-in-the-online-store-.png'" onmouseout="this.src='/images/8.shop-online.png'" class="img-responsive" alt="write a mail to your friend"></a>
+	                        <p class="text_profile">Shop in the online store</p>
+	                    </div>
+					</div>
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 maginbotom" align="center">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 product maginbotom">
+							<a href="#"><img src="/img/9.visit-website.png" style=" width:46%;" onmouseover="this.src='/images/Visit-the-website-four-times.png'" onmouseout="this.src='/images/9.visit-website.png'" class="img-responsive" alt="{{_ " extra points for comment "}}"></a>
+	                        <p class="text_profile">Visit the website four times in the same month in at least a two week span</p>
+	                    </div>
+	                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 product maginbotom">
+	                    	<a href="#"><img src="/img/10.translation.png" style=" width:46%;" onmouseover="this.src='/images/Translate a description.png'" onmouseout="this.src='/images/10.translation.png'" class="img-responsive" alt="{{_ " extra points for comment "}}"></a>
+	                        <p class="text_profile">Translate a description</p>
+	                    </div>
+					</div>
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 maginbotom" align="center">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 product maginbotom">
+							<a href="#"><img src="/img/Do-more-than-10-quizz.png" style=" width:46%;" onmouseover="this.src='/images/Do more than 10 quizz_p.png'" onmouseout="this.src='/images/Do-more-than-10-quizz.png'" class="img-responsive" alt="{{_ " extra points for comment "}}"></a>
+	                        <p class="text_profile">Do more than 10 quizz</p>
+	                    </div>
+	                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 product maginbotom">
+	                    	<a href="#"><img src="/img/Do-three-quizz.png" style=" width:46%;" onmouseover="this.src='/img/Do three quizz_p.png'" onmouseout="this.src='/images/Do-three-quizz.png'" class="img-responsive" alt="{{_ " extra points for comment "}}"></a>
+	                        <p class="text_profile">Do three quizz</p>
+	                    </div>
+					</div>
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 maginbotom" align="center">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 product maginbotom">
+							<a href="#"><img src="/img/First-quizz.png" style=" width:46%;" onmouseover="this.src='/images/First quizz_p.png'" onmouseout="this.src='/images/First-quizz.png'" class="img-responsive" alt="{{_ " extra points for comment "}}"></a>
+	                        <p class="text_profile">First quizz</p>
+	                    </div>
+					</div>
 				</div>
-				
 			</div>
 		</section>
     </article>
