delete slide on reward page

--- a/client/Views/App/Reward/page-reward.html
+++ b/client/Views/App/Reward/page-reward.html
@@ -34,11 +34,11 @@
 			</div>
 			
 			
-			<div class="row">
+			<!-- <div class="row">
 				<div class="bg_title">
 					<h4 class="small_reward text-right">{{_"HOW TO EARN MORE POINTS"}}</h4>
 				</div>
-			</div>
+			</div> -->
 			
 			<!-- <div class="row">
 				<div class="row_img">
@@ -50,12 +50,12 @@
 					</div>
 				</div>
 			</div> -->
-			<div class="swiper-container">
+			<!-- <div class="swiper-container">
 			    <div class="swiper-wrapper text-center">
 			        <div class="swiper-slide" data-hash="slide1"><img src="img/img_reward4.png"></div>
 			        <div class="swiper-slide" data-hash="slide2"><img src="img/img_reward3.png"></div>
 			    </div>
-			</div>
+			</div> -->
 			
 		</section>
     </article>
