get new version

--- a/client/Views/App/quizz/listQuizz.html
+++ b/client/Views/App/quizz/listQuizz.html
@@ -163,7 +163,7 @@
 						  	<div class="panel-heading-quiz">
 								<a href="/quizzQA/{{_id}}" id="quizzName"><h3 class="panel-title text-center">{{name}}</h3></a>
 						  	</div>
-						  	{{#if getQuizzBackground _id}}
+						  	{{#if hasCompleted _id}}
 						  		<div class="panel-body bg-hair">
 									<div class="row">
 										<div class="col-xs-12 showbutton">
