--- a/client/Views/App/quizz/quizzQA.html
+++ b/client/Views/App/quizz/quizzQA.html
@@ -42,7 +42,7 @@
 									<div class="section3">
 										<div class="row">
 											<div class="col-xs-8 col-xs-offset-2 col-md-2 col-md-offset-3 ">
-												<div type="button" class="btn btn-default center-block" data-toggle="modal" data-target="#next" id="goNext">Submit </div>
+												<div type="button" class="btn btn-default center-block" id="goNext">Submit </div>
 											</div>
 										</div>
 									</div>
