integrate and earn point quizz

--- a/client/Views/App/quizz/listQuizz.html
+++ b/client/Views/App/quizz/listQuizz.html
@@ -148,7 +148,9 @@
 										<button type="button" class="btn btn-quiz1 btn-block">Suggested products</button>
 									</div>
 									<div class="">
-										<button type="button" class="btn btn-quiz2 pull-right">Redo the quiz</button>
+										<a id="id_sucgested" href="/quizzQA/{{_id}}">
+											<button type="button" class="btn btn-quiz2 pull-right">Redo the quiz</button>
+										</a>
 									</div>
 								</div>
 							</div>
