--- a/client/Views/App/quizz/quizzQA.html
+++ b/client/Views/App/quizz/quizzQA.html
@@ -23,13 +23,13 @@
 								{{#with getFirstQu question}}
 									<div class="section1-question">
 										<div class="col-md-12">
-											<p class="question text-center">{{question}}</p>
+											<p class="question text-center" style="font-weight: bold;font-size: 17px;">{{question}}</p>
 										</div>
 									</div>
 									{{#each answers}}
-										<div class="answer-radia">
+										<div class="answer-radia" style="float: left;">
 											<div class="col-md-4 col-md-offset-3">
-												<label class="radio">
+												<label class="radio" style="font-weight: 400;">
 													<input id="face" type="radio" name="radios_checkbox" value="{{value}}">
 													<span class="outer"><span class="inner"></span></span>{{value}}
 												</label>
