add link menu Quizzs to profile

--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -35,6 +35,11 @@
 	                            <span class="menu-li-title left-menu padd">{{_"Rewards & points"}}</span>
 	                        </a>
 	                    </li>
+	                    <li>
+	                        <a href="/quizzs">
+	                            <span class="menu-li-title left-menu padd">{{_"Quizzs"}}</span>
+	                        </a>
+	                    </li>
 	                </ul>
 	            </li>
 	            <li>
