image product not show on page checkout

--- a/client/Views/App/product/checkout.html
+++ b/client/Views/App/product/checkout.html
@@ -29,7 +29,7 @@
 			<div class="checkout-detail">
 				{{#with getProductInfo id_product}}
 					<div class="col-xs-4"> 
-						<img src="{{getFirstImgProduct _id}}" class="img-circle">
+						<img src="{{getImgForProduct _id}}" class="img-circle">
 					</div>
 				{{/with}}
 
