--- a/client/Views/App/menu.html
+++ b/client/Views/App/menu.html
@@ -10,7 +10,7 @@
 				</li>
 				{{#if navnodisplay}}
 				<li>
-					<a href="{{pathFor 'listing' id=(slug title)}}"><label id="all_makeup"></label> <i class="fa fa-caret-down"></i></a>
+					<a href="{{pathFor 'listing' id=(slug title)}}"><label id="all_makeup">{{_"ALL"}} {{getTitlechild1}}</label> <i class="fa fa-caret-down"></i></a>
 				</li>
 				
 				<li>
