suggest product after quizz

--- a/client/Views/App/quizz/listQuizz.html
+++ b/client/Views/App/quizz/listQuizz.html
@@ -145,7 +145,9 @@
 									</div>
 								
 									<div class="col-xs-8 col-xs-offset-2">
-										<button type="button" class="btn btn-quiz1 btn-block">Suggested products</button>
+										<!-- <a href="/suggestpages/{{_id}}"> -->
+											<button type="button" class="btn btn-quiz1 btn-block">Suggested products</button>
+										<!-- </a> -->
 									</div>
 									<div class="">
 										<a id="id_sucgested" href="/quizzQA/{{_id}}">
@@ -169,7 +171,9 @@
 						  		<div class="panel-body bg-hair">
 									<div class="row">
 										<div class="col-xs-12 showbutton">
-											<button type="button" class="btn btn-quiz1 btn-block">Suggested</button>
+											<a href="/suggestpages/{{_id}}">
+												<button type="button" class="btn btn-quiz1 btn-block">Suggested</button>
+											</a>
 										</div>
 										<a href="/editquizzQA/{{_id}}" id="redo">
 											<div class="col-xs-12 showbutton">
