--- a/client/Views/App/menu.html
+++ b/client/Views/App/menu.html
@@ -3,10 +3,7 @@
 		<div class="hold_refine">
 			<ul class="refine_menu list-inline">
 				<li class="active">
-					<a href="{{pathFor 'listing' id=(slug title)}}">
-						<label id="makeup"></label> 
-						<i class="fa fa-caret-down"></i>{{title}}
-					</a>
+					<a href="{{pathFor 'listing' id=(slug title)}}"><label id="makeup"></label> <i class="fa fa-caret-down"></i>{{title}}</a>
 				</li>
 				{{#if navnodisplay}}
 				<li>
