--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -96,19 +96,19 @@
                             <form role="form">
                                 <div class="form-group select_grade">
                                     <div class="star">
-                                        <div class="col-xs-2 rate-star">
+                                        <div class="col-xs-2 rate-star ">
                                             <i class="fa fa-star fa-lg starRang" data-star="1"></i>
                                         </div>
-                                        <div class="col-xs-2 rate-star">
+                                        <div class="col-xs-2 rate-star ">
                                             <i class="fa fa-star fa-lg starRang" data-star="2"></i>
                                         </div>
-                                        <div class="col-xs-2 rate-star">
+                                        <div class="col-xs-2 rate-star ">
                                             <i class="fa fa-star fa-lg starRang" data-star="3"></i>
                                         </div>
-                                        <div class="col-xs-2 rate-star">
+                                        <div class="col-xs-2 rate-star ">
                                             <i class="fa fa-star fa-lg starRang" data-star="4"></i>
                                         </div>
-                                        <div class="col-xs-2 rate-star">
+                                        <div class="col-xs-2 rate-star ">
                                             <i class="fa fa-star fa-lg starRang" data-star="5"></i>
                                         </div>
                                     </div>
@@ -120,7 +120,16 @@
                         </div>
                     </div>
                 </div>
+                {{else}}
+                    <div class="row">
+                        <div class="col-xs-12">
+                        <a href="/login">
+                            <h4>{{_"Please login to add review."}}</h4>
+                        </a>
+                        </div>
+                    </div>
                 {{/if}}
+
                 <div class="clear-fix"></div>
                 {{#each getReviewBySort review}}
                     <div class="row">
@@ -138,22 +147,19 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <div class="col-sm-2 pull-right space-top-detail2">
-                                <h3><i class="fa fa-heart likereview"></i>&nbsp;19</h3>
+                                <h3>19&nbsp;<i class="fa fa-heart likereview"></i></h3>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
-                            <h5 class="pull-left space-top-detail3">{{title}}</h5>
-                            <p class="pull-left space-top-detail3">{{comment}}</p>
+                            <h4 style="font-weight: bold;">{{title}}</h4>
+                            <p class="space-top-detail3" style="text-align: justify;">{{comment}}</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="col-xs-5">
-                                
-                            </div>
-                            <div class="col-xs-7">
+                            <div class="col-md-3 col-md-offset-2 pull-right">
                                 <a href="#" style="font-weight:bold; color:#333;">
                                 <span style="display: none">{{idreview}}</span>
                                         {{{getRate grade}}}</a>
