--- a/client/Views/App/tuto/tutodetails.html
+++ b/client/Views/App/tuto/tutodetails.html
@@ -20,49 +20,107 @@
                         <!-- hold-tuto -->
                     </div>
                     <!-- col-xs-12 -->
-                    {{/with}} {{#if currentUser}}
+                    {{/with}} 
+                    {{#if currentUser}}
                     <div class="col-xs-12">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="col-md-6 pull-left space-top-detail2">
+                                    <img src="{{getImg currentUser.image}}" class="img-responsive center-block" style="width: 50%;">
+                                    <h4 class="bold text-center">{{currentUser.profile.firstname}} {{currentUser.profile.lastname}}</h4>
+                                </div>
+                            </div>
+                        </div>
                         <form role="form">
                             <p id="validTuto" style="color:red"></p>
                             <div class="form-group">
                                 <textarea class="form-control" rows="5" id="comment" placeholder="Write what you want here..."></textarea>
                             </div>
                         </form>
+                        <div class="col-md-3 col-md-offset-2 pull-left" style="margin-left: -30px">
+                            <form role="form" style="margin-top:-50px">
+                                <div class="form-group select_grade">
+                                    <div class="star">
+                                        <div class="col-xs-2 rate-star ">
+                                            <i class="fa fa-star fa-lg starRang" data-star="1"></i>
+                                        </div>
+                                        <div class="col-xs-2 rate-star ">
+                                            <i class="fa fa-star fa-lg starRang" data-star="2"></i>
+                                        </div>
+                                        <div class="col-xs-2 rate-star ">
+                                            <i class="fa fa-star fa-lg starRang" data-star="3"></i>
+                                        </div>
+                                        <div class="col-xs-2 rate-star ">
+                                            <i class="fa fa-star fa-lg starRang" data-star="4"></i>
+                                        </div>
+                                        <div class="col-xs-2 rate-star ">
+                                            <i class="fa fa-star fa-lg starRang" data-star="5"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
                         <a href="" class="pull-right">
                             <span class="span-send" id="addreview">{{_"SEND"}}</span>
                         </a>
                     </div>
                     <!-- col-xs-12 -->
+                    {{else}}
+                        <div class="row">
+                            <div class="col-xs-12">
+                            <a href="/login">
+                                <h4 style="margin-left:16px">{{_"Please login to add review."}}</h4>
+                            </a>
+                            </div>
+                        </div>
                     {{/if}}
-                    <div class="clearfix"></div>
-                    {{#each getReviewBySort review}}
-                    <div class="row">
-                        <div class="col-xs-4 pull-left space-top-detail2">
-                            <img src="{{getImages user}}" class="img-responsive center-block image{{user}}">
-                            <h4 class="bold text-center {{user}}">{{getImageUser user}}</h4>
-                        </div>
-                        <div class="col-xs-8">
-                            <div class="pull-left space-top-detail3">
-                                <!-- <h2>{{comment}}</h2> -->
-                                <p class="col-sm-5 pull-left space-top-detail2">{{title}}</p>
-                                <p class="no-margin">{{getDate date}}</p>
-                            </div>
-                        </div>
-                        <div class="col-sm-2 pull-right space-top-detail2">
-                            <!--  <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp; {{grade}}/5</h3> -->
-                        </div>
-                        <div class="col-sm-12">
-                            <p class="col-sm-5 pull-left space-top-detail2">{{comment}}</p>
-                            <div class="pull-left border-detail">
-                            </div>
-                        </div>
-                    </div>
-                    {{/each}}
+
                     <div class="clearfix"></div>
                 </div>
-                <!-- row -->
+            </div>
+            <!-- row -->
+        </section>
+        <section class="shadow_bottom">
+            <div class="wrapper">
+                {{#each getReviewBySort review}}
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="col-xs-5 pull-left space-top-detail2">
+                            <img src="{{getImages user}}" class="img-responsive image{{user}}">
+                        </div>
+                        <div class="col-xs-7 pull-left space-top-detail2">
+                            <h4 class="bold {{user}}">{{getImageUser user}}</h4>
+                            <p class="no-margin">{{getDate date}}</p>
+                            <!--  <p class="no-margin">11:16</p> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="col-sm-2 pull-right space-top-detail2">
+                            <h3>19&nbsp;<i class="fa fa-heart likereview"></i></h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h4 style="font-weight: bold;">{{title}}</h4>
+                        <p class="space-top-detail3" style="text-align: justify;">{{comment}}</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="col-md-3 col-md-offset-2 pull-right">
+                            <a href="#" style="font-weight:bold; color:#333;">
+                                <span style="display: none">{{idreview}}</span> {{{getRate grade}}}</a>
+                        </div>
+                        <div class="pull-left border-detail"></div>
+                    </div>
+                </div>
+                {{/each}}
             </div>
         </section>
+        <div class="clearfix"></div>
         <section id="forum_question" dir="{{getDirection}}">
             <div class="container">
                 <div class="hold_product_detail">
