--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -66,7 +66,7 @@ h6 {
 .space-top-detail3 {
     color: #000;
     font-size: 16px;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
 }
 
 .no-margin {
