add title in tuto detail

--- a/client/Views/App/tuto/tutodetails.html
+++ b/client/Views/App/tuto/tutodetails.html
@@ -34,6 +34,9 @@
                         <form role="form">
                             <p id="validTuto" style="color:red"></p>
                             <div class="form-group">
+                                <p id="validtuto" style="color:red"></p>
+                                <input id="title" type="text" class="form-control" placeholder="{{_" Title "}}..." required/>
+                                <p id="validtuto1" style="color:red"></p>
                                 <textarea class="form-control" rows="5" id="comment" placeholder="Write what you want here..."></textarea>
                             </div>
                         </form>
